# bhpy

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml  setup.py  usedPackages.md
bhpy/: __init__.py  bh_connect.py  bh_device_scan_wrapper.py  bh_lv_wrapper.py  bh_remote_control.py  lvWrapper.py  spc_qc_config.py  spc_qc_wrapper.py  spc_tdc_config.py  spc_tdc_wrapper.py
examples/: controll_bdu.py  spc_tdc_multicard_measurement.py
pyVenv/bhpy/: requirements.txt
tests/: pep_check.bat  pep_check.py  test_tdc_wrapper.py
