[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bhpy"
version = "0.0.6"
authors = [
  { name="Marscheck", email="marscheck@becker-hickl.de" },
]
dependencies = ["numpy >= 1.23.0, <2"]
description = "Python bindings to use Becker & Hickls' hardware control dll and API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
keywords = ['FLIM', 'Fluorescence lifetime', 'TCSPC', 'photon counting', 'BH', 'Becker&Hickl', 'molecular imaging', 'SPC', 'SPCM']
classifiers = [
    'Development Status :: 3 - Alpha', # Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Intended Audience :: Healthcare Industry',
    'Topic :: Scientific/Engineering',
    'Topic :: Software Development :: Libraries',
    'Topic :: System :: Hardware :: Hardware Drivers',
    'Topic :: Software Development :: Build Tools',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://www.becker-hickl.com"
"Bug Tracker" = "https://github.com/bhmarscheck/bhpy/issues"
"Download" = "https://github.com/bhmarscheck/bhpy/archive/refs/tags/v0.0.6-alpha.tar.gz"