[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["bhpy", "dll"]

[tool.hatch.build.targets.wheel.sources]
"bhpy" = ""
"dll" = "dll"

[project]
name = "bhpy"
version = "2.1.0"
authors = [
  { name="Marscheck", email="marscheck@becker-hickl.de" },
]
dependencies = [
  "numpy >= 1.24.2, <2",
  "appdirs >= 1.4.4, <2"
]
description = "Python bindings to use Becker & Hickls' hardware control dll and API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
keywords = ['FLIM', 'Fluorescence lifetime', 'TCSPC', 'photon counting', 'BH', 'Becker&Hickl', 'molecular imaging', 'SPC', 'SPCM']
classifiers = [
    'Development Status :: 5 - Production/Stable', # Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Intended Audience :: Healthcare Industry',
    'Topic :: Scientific/Engineering',
    'Topic :: Software Development :: Libraries',
    'Topic :: System :: Hardware :: Hardware Drivers',
    'Topic :: Software Development :: Build Tools',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Operating System :: OS Independent',
]

[project.urls]
"Homepage" = "https://www.becker-hickl.com/products/bhpy"
"Bug Tracker" = "https://github.com/bhmarscheck/bhpy/issues"
"Download" = "https://git.becker-hickl.com/products/bhpy/-/archive/v2.1.0/bhpy-v2.1.0.tar.gz"

[tool.flake8]
max-line-length = 99